Fixed donation layout issues pointed out by Nick.

--- a/src/components/shared/scss/_layout.scss
+++ b/src/components/shared/scss/_layout.scss
@@ -141,9 +141,9 @@
       }
 
       @include bp(small) {
-        display: block;
-        width: 35%;
-        margin-right: 5px;
+        float: right;
+        width: 30%;
+        margin: 6px 25px 0 0;
         border: 1px solid $blue;
         border-radius: 5px;
         padding: 6px 0;
@@ -157,8 +157,12 @@
       font-size: 14px;
 
       @include bp(small) {
-        margin: 7px auto 0 0;
+        display: inline-block;
+        width: 60%;
+        height: 100%;
+        text-align: right;
         font-size: $font-small;
+        line-height: 1.0em;
       }
     }
 
@@ -186,9 +190,9 @@
     }
 
     @include bp(small) {
-      width: 80%;
+      width: 100%;
       text-align: center;
-      margin: 4px 10px;
+      margin: 5px auto 4px auto;
     }
 
     a {
